--- a/environnement/bibliodrive/backoffice/templates/registration/register.html
+++ b/environnement/bibliodrive/backoffice/templates/registration/register.html
@@ -26,9 +26,7 @@
                         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                             <i class="fas fa-user text-gray-400"></i>
                         </div>
-                        {{ form.username|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border
-                        border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none
-                        focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder:Identifiant" }}
+                        {{ form.username|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder:Identifiant" }}
                     </div>
                 </div>
 
@@ -39,9 +37,7 @@
                         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                             <i class="fas fa-lock text-gray-400"></i>
                         </div>
-                        {{ form.password1|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border
-                        border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none
-                        focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder:Mot de passe" }}
+                        {{ form.password1|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder=Mot de passe" }}
                     </div>
                 </div>
 
@@ -52,10 +48,7 @@
                         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                             <i class="fas fa-lock text-gray-400"></i>
                         </div>
-                        {{ form.password2|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border
-                        border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none
-                        focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder:Confirmer le mot de
-                        passe" }}
+                        {{ form.password2|add_class:"appearance-none relative block w-full px-3 py-3 pl-10 border border-gray-300 rounded-lg placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10"|attr:"placeholder=Confirmer le mot de passe" }}
                     </div>
                 </div>
 
