--- a/environnement/bibliodrive/backoffice/templates/registration/accueil.html
+++ b/environnement/bibliodrive/backoffice/templates/registration/accueil.html
@@ -4,10 +4,10 @@
 <div class="relative min-h-screen">
     <div id="particles-js" class="absolute inset-0"></div>
 
-    <!-- Contenu principal -->
+    
     <div class="relative z-10">
         <div class="max-w-7xl mx-auto py-10 px-4 fade-in">
-            <!-- Section bvn -->
+            <!-- section bvn -->
             <div class="bg-white/80 backdrop-blur-sm shadow-lg rounded-2xl p-8 mb-8 border border-indigo-50 card-hover">
                 <div class="flex items-center space-x-4">
                     <i
@@ -22,9 +22,9 @@
                 </div>
             </div>
 
-            <!-- Section stats -->
+            <!-- stats -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <!-- Card authors -->
+                <!-- card authors -->
                 <div
                     class="bg-white/80 backdrop-blur-sm shadow-lg rounded-2xl p-6 card-hover floating-card border border-indigo-50">
                     <div class="flex items-center space-x-4">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <!-- Carte publishers -->
+                <!-- card publishers -->
                 <div
                     class="bg-white/80 backdrop-blur-sm shadow-lg rounded-2xl p-6 card-hover floating-card border border-indigo-50">
                     <div class="flex items-center space-x-4">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <!-- Carte book -->
+                <!-- Card book -->
                 <div
                     class="bg-white/80 backdrop-blur-sm shadow-lg rounded-2xl p-6 card-hover floating-card border border-indigo-50">
                     <div class="flex items-center space-x-4">
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<!-- Script -->
+<!-- Script pour faire bo -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
     window.onload = function () {
