--- a/environnement/bibliodrive/backoffice/templates/book/book_list.html
+++ b/environnement/bibliodrive/backoffice/templates/book/book_list.html
@@ -23,7 +23,7 @@
 
     {% block content %}
     <div class="container mx-auto px-4 py-12">
-        <!-- En-tête -->
+        <!-- head -->
         <div class="max-w-7xl mx-auto mb-8">
             <div class="bg-gradient-to-r from-blue-600 to-teal-600 rounded-xl p-8 text-white shadow-lg">
                 <h1 class="text-3xl font-bold flex items-center">
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <!-- Barre de recherche -->
+        <!-- recherche barre -->
         <div class="max-w-7xl mx-auto mb-8">
             <div class="relative">
                 <input type="text" id="searchInput"
@@ -70,13 +70,13 @@
                 </div>
             </div>
 
-            <!-- Grid -->
+            <!-- grid -->
             <div class="flex-1">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
                     {% for book in objects %}
                     <div id="book-{{ book.isbn }}"
                         class="group bg-white rounded-2xl shadow-md hover:shadow-2xl transition-all duration-300 overflow-hidden border border-gray-100">
-                        <!-- Image -->
+                        <!-- img -->
                         <div class="relative w-full h-64 bg-gray-50 overflow-hidden">
                             {% if book.image %}
                             <div
@@ -93,7 +93,7 @@
                             {% endif %}
                         </div>
 
-                        <!-- card container -->
+                        <!-- card -->
                         <div class="p-6 space-y-4">
                             <h3
                                 class="text-xl font-bold text-gray-800 group-hover:text-blue-600 transition-colors duration-300">
@@ -101,7 +101,7 @@
                             </h3>
 
                             <div class="space-y-4">
-                                <!-- Note -->
+                                <!-- note -->
                                 {% if book.notes %}
                                 <div class="relative bg-gradient-to-r from-blue-50 to-teal-50 p-4 rounded-xl">
                                     <div
@@ -128,7 +128,7 @@
                                 </div>
                             </div>
 
-                            <!-- Boutons d'action -->
+                            <!-- btn actions-->
                             <div class="space-y-3 pt-2">
                                 <a href="{% url 'book-detail' book.isbn %}"
                                     class="block w-full text-center px-4 py-2.5 bg-gradient-to-r from-blue-600 to-teal-600 text-white font-medium rounded-xl hover:from-blue-700 hover:to-teal-700 transform hover:-translate-y-0.5 transition-all duration-200">
