--- a/environnement/bibliodrive/backoffice/templates/registration/accueil.html
+++ b/environnement/bibliodrive/backoffice/templates/registration/accueil.html
@@ -4,10 +4,10 @@
 <div class="relative min-h-screen">
     <div id="particles-js" class="absolute inset-0"></div>
 
-    
+
     <div class="relative z-10">
         <div class="max-w-7xl mx-auto py-10 px-4 fade-in">
-            <!-- section bvn -->
+            <!--bvn -->
             <div class="bg-white/80 backdrop-blur-sm shadow-lg rounded-2xl p-8 mb-8 border border-indigo-50 card-hover">
                 <div class="flex items-center space-x-4">
                     <i
@@ -79,7 +79,7 @@
     </div>
 </div>
 
-<!-- Script pour faire bo -->
+<!--particles -->
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
     window.onload = function () {
