--- a/environnement/bibliodrive/backoffice/templates/base.html
+++ b/environnement/bibliodrive/backoffice/templates/base.html
@@ -14,7 +14,7 @@
   <nav class="bg-white border-b border-slate-200 sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16">
-        <!-- Logo -->
+        <!-- head -->
         <div class="flex items-center w-1/4">
           <a href="{% url 'accueil' %}" class="flex items-center space-x-3">
             <i class="fas fa-book-open text-indigo-600 text-2xl"></i>
@@ -22,7 +22,7 @@
           </a>
         </div>
 
-        <!-- Navigation Links (Centered) -->
+        <!-- nav link -->
         <div class="flex-1 flex justify-center">
           <div class="hidden sm:flex sm:items-center">
             <div class="flex space-x-8">
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <!-- Login/Logout Section -->
+        <!-- login & logout section-->
         <div class="flex items-center w-1/4 justify-end space-x-4">
           {% if user.is_authenticated %}
           <span class="text-gray-600 text-sm">
@@ -91,7 +91,7 @@
 
   {% block content %} {% endblock %}
 
-  <!-- Footer -->
+  <!-- footer -->
   <footer class="bg-white border-t border-slate-200 fixed bottom-0 w-full">
     <div class="max-w-7xl mx-auto px-4 py-4">
       <p class="text-center text-sm text-slate-500">
